# commit-message-generator

./: .env.local.example  .gitignore  README.md  hackerrank.yml  requirements.txt
IGNORE_THIS_FOLDER/: README.md  pyproject.toml
IGNORE_THIS_FOLDER/log_analyzer/: analyzer.py  log_parser.py  main.py  report.py
commit-message-agent/: commit_message_agent.py  prompt.txt  pyproject.toml  requirements.txt  user_prompt.txt
commit-message-agent/helpers/: git.py  llm.py
commit-message-generator/: judge.py
commit-message-generator/helpers/: git.py
judge/: conftest.py  judge.py  pyproject.toml  requirements-dev.txt  test_judge.py
judge/helpers/: git.py  llm.py
kanban/: README.md  db.py  helpers.py  main.py  mcp_tools.py  pyproject.toml  seed.py
kanban_mcp/: README.md  pyproject.toml  seed.py
kanban_mcp/kanban/: db.py  main.py  mcp_tools.py  models.py  setup.py
log_analyzer_project/: README.md  pyproject.toml
log_analyzer_project/log_analyzer/: analyzer.py  constants.py  exporter.py  filters.py  log_parser.py  main.py  report.py  utils.py
setup/: branch_1.sh  branch_2.sh  branch_3.sh  branch_4.sh  dont_push.sh  feat-317.txt  feat-452.txt  feat_311.txt  fix-359.txt  install.sh  setup.sh
